@@ -37,6 +37,7 @@ Release 0.9.6
 - allow the view (ZMView) to control the content type and encoding.
 - wrap PDOException in ZMException
 - allow to send alternative HTTP status code with redirects
+- add toolbox utils wrapper for template manager CSS/JS methods and use
 
 Release 0.9.5.1
 - fix broken price filter in product search; b:#2689495
